# school-C-programming

./: README.md
bikeComputer/: CMakeLists.txt  bike_math.c  bike_math.h  bike_measure.c  bike_measure.h  bike_store.c  bike_store.h  main  main.c
